--- a/apps/client/src/index.html
+++ b/apps/client/src/index.html
@@ -5,8 +5,10 @@
     <title>Sociant</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body>
+      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+  <body class="mat-typography">
     <sociant-root></sociant-root>
   </body>
 </html>
